@@ -4,7 +4,9 @@ http://mathworld.wolfram.com/CollatzProblem.html
 
 in Azure
 
-Other links:
+Other links
 http://en.wikipedia.org/wiki/Collatz_conjecture
+http://www.ericr.nl/wondrous/
+
 
 
